# folio

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite-plugin-release-notes.ts  vite.config.ts
.github/workflows/: ci.yml  docs-on-merge.yml  release.yml
.pr-reviews/: feat-48-saved-themes-data-layer-20260411-192916.md  feat-48-saved-themes-ui-20260411-195053.md  feat-48-settings-restructure-20260411-200243.md  feat-backup-running-raii-guard-20260422-114620.md  feat-backup-storage-read-path-20260422-110839.md  feat-bulk-edit-metadata-20260413-184052.md  feat-folio-core-m1-workspace-scaffolding-20260419-185800.md  feat-folio-core-m2-db-20260419-191257.md  feat-folio-core-m3-parsers-20260419-192919.md  feat-folio-core-m4-enrichment-20260419-194105.md  feat-folio-core-m5-backup-sync-20260419-195259.md  feat-folio-core-storage-m1-trait-20260420-084449.md  feat-folio-core-storage-m2-book-files-20260420-090309.md  feat-folio-core-storage-m3-covers-20260420-092403.md  feat-folio-core-storage-m4-db-keys-20260420-095129.md  feat-folio-core-storage-m5-page-cache-20260421-232441.md  feat-folio-core-storage-m6-inline-images-20260422-000626.md  feat-phase1-step1-backend-perf-20260413-121743.md  feat-phase1-step2-frontend-perf-20260413-123358.md  feat-phase1-step3-virtual-scroll-20260413-124242.md  feat-structured-errors-20260419-174615.md  feat-system-tray-autostart-20260413-205922.md  feat-system-tray-autostart-20260413-205929.md  feat-tags-fix-and-filter-20260415-121501.md  feat-web-server-step1-skeleton-20260407-163435.md  feat-web-server-step2-appstate-commands-20260410-222206.md  feat-web-server-step3-auth-middleware-20260410-223022.md  fix-epub-inline-image-basename-collision-20260422-092220.md  fix-review-team-critical-findings-20260413-130711.md  fix-web-server-critical-findings-20260411-111735.md  fix-web-server-review-findings-20260411-121628.md  telegram-setup-guide.md
docs/: PLUGINS.md  PLUGIN_ARCHITECTURE.md  PRE-2.0-POLISH.md  PRIVACY.md  ROADMAP.md  USER_GUIDE.md  UX-CONVENTIONS.md  WEB_SERVER_API.md  changelog.html  ux-audit.md  web-server-plan.md  web-ui-app-feel.md  web-ui-improvements.md
docs/backlog/: 2026-06-01-resumable-remote-import.md
docs/mobile/: TECHNICAL_FEASIBILITY.md
e2e/: app-shell.spec.ts  bookmarks.spec.ts  callout-selection.spec.ts  core-smoke.spec.ts  detail-action-overflow.spec.ts  detail-actions.ts  f4-4-chapter-prefetch.spec.ts  highlights.spec.ts  item14-pagination.spec.ts  item15-progress-badges.spec.ts  offline-mode.spec.ts  page-cache-recovery.spec.ts  pinch-zoom.spec.ts  playwright.config.ts  tap-targets.spec.ts  toc.spec.ts  typography.spec.ts  want-to-read.spec.ts  web-ui-stats-collections.spec.ts
folio-core/: Cargo.toml  build.rs
folio-core/src/: activity.rs  backup.rs  cache.rs  cbr.rs  cbz.rs  db.rs  dictionary.rs  enrichment.rs  epub.rs  error.rs  events.rs  http_retry.rs  image_util.rs  isbn.rs  lib.rs  models.rs  opds.rs  opds_feed.rs  openlibrary.rs  page_cache.rs  paths.rs  pdf.rs  profile_lock.rs  search.rs  storage.rs  sync.rs  vocabulary.rs
folio-core/src/mobi/: adapter.rs  ffi.rs  mod.rs
folio-core/src/plugins/: manifest.rs  mod.rs  permissions.rs  runtime.rs
folio-core/src/providers/: bnf.rs  comic_vine.rs  google_books.rs  mod.rs  openlibrary.rs
scripts/: build-dictionary-artifact.sh  build-libmobi.sh  build_dictionary_db.py  download-pdfium.sh  fetch-mobi-test-corpus.sh
src/: App.tsx  i18n.ts  index.css  main.tsx  test-setup.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.mobi.conf.json
src-tauri/.pr-reviews/: fix-phase9-review-20260411-155538.md
src-tauri/capabilities/: default.json
src-tauri/examples/: web_e2e_server.rs
src-tauri/icons/: icon.icns
src-tauri/resources/example-plugins/auto-tagger/: main.rhai  plugin.toml
src-tauri/resources/example-plugins/highlight-exporter/: main.rhai  plugin.toml
src-tauri/resources/example-plugins/opds-auto-download/: main.rhai  plugin.toml
src-tauri/resources/example-plugins/stats-notifier/: main.rhai  plugin.toml
src-tauri/src/: analytics.rs  backup.rs  cbr.rs  cbz.rs  ci_workflow_test.rs  commands.rs  db.rs  enrichment.rs  epub.rs  error.rs  ipc_metrics.rs  lib.rs  models.rs  observability.rs  opds.rs  openlibrary.rs  page_cache.rs  page_wire.rs  pdf.rs  plugin_host.rs  release_workflow_test.rs  sync.rs  tauri_config_test.rs  tray.rs  update.rs
src-tauri/src/providers/: bnf.rs  comic_vine.rs  mod.rs  openlibrary.rs
src-tauri/src/web_server/: api.rs  auth.rs  mod.rs  opds_feed.rs  web_ui.rs
src-tauri/src/web_server/static/: app.css  app.js  index.html  manifest.json  sw.js
src/components/: ActivityLog.tsx  AnalyticsConsentDialog.test.tsx  AnalyticsConsentDialog.tsx  BookCard.deleteConfirm.test.tsx  BookCard.test.tsx  BookCard.tsx  BookCompletionModal.tsx  BookDetailModal.tsx  BookPickerModal.tsx  BookStackIllustration.tsx  BookmarkToast.tsx  BookmarksPanel.tsx  BulkEditDialog.test.tsx  BulkEditDialog.tsx  CatalogBrowser.test.tsx  CatalogBrowser.tsx  ChapterErrorCard.test.tsx  ChapterErrorCard.tsx  ChapterLoadProgress.test.tsx  ChapterLoadProgress.tsx  CollectionsSidebar.test.tsx  CollectionsSidebar.tsx  ComicExtractProgress.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  EditBookDialog.test.tsx  EditBookDialog.tsx  EmptyState.tsx  HighlightSearchModal.tsx  HighlightsPanel.tsx  ImportButton.test.tsx  ImportButton.tsx  ImportStatusBar.test.tsx  ImportStatusBar.tsx  KeyboardShortcutsHelp.tsx  LanguageSwitcher.tsx  LiveRegion.test.tsx  LiveRegion.tsx  MissingFileDialog.test.tsx  MissingFileDialog.tsx  (+46 more)
src/context/: ImportContext.test.tsx  ImportContext.tsx  OnboardingContext.test.tsx  OnboardingContext.tsx  ThemeContext.tsx
src/data/: opds-presets.json  opds-presets.test.ts
src/hooks/: useBookCompletion.ts  useDebounce.test.ts  useDebounce.ts  useOnboarding.test.ts  useOnboarding.ts  usePrivateMode.ts  useUpdateCheck.ts  useWhatsNew.ts
src/lib/: backupConnection.test.ts  (+51 more)
(+115 files in other folders)
