[workspace]
resolver = "2"
members = [
    "folio-core",
    "src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.4.1"

[workspace.dependencies]
# Error / serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Misc utilities used across crates
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
sha2 = "0.10"
regex = "1"
url = "2"
urlencoding = "2"
log = "0.4.29"
keyring = "3"
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs"] }
opendal = { version = "0.55", features = ["services-s3", "services-fs", "services-ftp", "services-webdav", "blocking"] }

# Archive / parser support
zip = "2"
quick-xml = "0.36"
ammonia = "4"
unrar = "0.5"
pdfium-render = { version = "0.8", features = ["image"] }

# Dev
tempfile = "3"
