[workspace]
resolver = "2"
members = [
    "folio-core",
    "src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "2.5.0"

[workspace.dependencies]
# Error / serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Misc utilities used across crates
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
sha2 = "0.10"
regex = "1"
url = "2"
urlencoding = "2"
log = "0.4.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
tracing-appender = "0.2"
keyring = "3"
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs"] }
opendal = { version = "0.55", features = ["services-s3", "services-fs", "services-ftp", "services-webdav", "blocking"] }

# Plugin/hook system (spec 2026-06-12): user-script runtime + manifest parsing.
# `sync` makes rhai types Send+Sync so engines can live behind the event bus's
# dispatch thread boundary.
rhai = { version = "1", features = ["sync"] }
toml = "0.8"

# Archive / parser support
zip = "2"
quick-xml = "0.36"
ammonia = "4"
unrar = "0.5"
pdfium-render = { version = "0.8", features = ["image"] }

# libmobi FFI (#34 MOBI/AZW/AZW3 support)
bindgen = "0.71"
pkg-config = "0.3"

# Dev
tempfile = "3"
