[package]
name = "folio-core"
description = "Folio shared core library — models, database, parsers, and services with no UI/IPC dependencies."
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "folio_core"

[dependencies]
# error.rs uses these via From<> conversions
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
keyring = { workspace = true }
opendal = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
image = { workspace = true }

# paths.rs
dirs = { workspace = true }

# isbn.rs
regex = { workspace = true }

# Parsers (M3)
ammonia = { workspace = true }
base64 = { workspace = true }
pdfium-render = { workspace = true }
unrar = { workspace = true }
urlencoding = { workspace = true }

# page_cache.rs
log = { workspace = true }

[features]
# Exposes test-only helpers like `db::init_db` so cross-crate integration
# tests (e.g. in `src-tauri/`) can reach them. Never enable in release builds.
test-utils = []

[dev-dependencies]
tempfile = { workspace = true }
