[package]
name = "folio-core"
description = "Folio shared core library — models, database, parsers, and services with no UI/IPC dependencies."
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "folio_core"

[dependencies]
# error.rs uses these via From<> conversions
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
keyring = { workspace = true }
opendal = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
image = { workspace = true }

# paths.rs
dirs = { workspace = true }

# isbn.rs
regex = { workspace = true }

# Parsers (M3)
ammonia = { workspace = true }
base64 = { workspace = true }
pdfium-render = { workspace = true }
unrar = { workspace = true }
urlencoding = { workspace = true }

# page_cache.rs
log = { workspace = true }

# epub.rs — collision-safe key derivation for inline image storage
sha2 = { workspace = true }

# backup.rs (tokio runtime guarding for blocking opendal calls)
tokio = { workspace = true }

[features]
default = []
# Exposes test-only helpers like `db::init_db` so cross-crate integration
# tests (e.g. in `src-tauri/`) can reach them. Never enable in release builds.
test-utils = []
# Enables SFTP as a backup provider. Opt-in because `opendal`'s SFTP service
# pulls in an OpenSSH dependency chain that materially grows the build.
sftp = ["opendal/services-sftp"]
# MOBI/AZW/AZW3 support via libmobi (LGPL v3+) linked dynamically.
# Opt-out so we can build without libmobi present (e.g. platforms where the
# native toolchain isn't ready yet).
mobi = []

[build-dependencies]
bindgen = { workspace = true }
pkg-config = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
