[package]
name = "folio"
version.workspace = true
description = "A Tauri App"
authors = ["you"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
folio-core = { path = "../folio-core" }
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
zip = "2"
quick-xml = "0.36"
ammonia = "4"
base64 = "0.22"
pdfium-render = { version = "0.8", features = ["image"] }
image = "0.25"
dirs = "5"
sha2 = "0.10"
unrar = "0.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
opendal = { version = "0.55", features = ["services-s3", "services-fs", "services-ftp", "services-webdav", "blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
keyring = "3"
regex = "1"
url = "2"
urlencoding = "2"
log = "0.4.29"
tauri-plugin-clipboard-manager = "2.3.2"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
qrcode = "0.14"
tauri-plugin-autostart = "2"
open = "5"
tauri-plugin-webdriver-automation = "0.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["sftp"]
sftp = ["opendal/services-sftp"]

